--- a/index.html
+++ b/index.html
@@ -2,8 +2,41 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <script>
+        console.log("iniciando...");
+document.addEventListener('DOMContentLoaded', function() {
+    var h1Um = document.querySelector("#h1Um");
+
+    if (h1Um) {
+        h1Um.innerHTML = '';
+    }
+
+    const firstText = "Oi bom(a) dia/tarde/noite, esse e meu primeiro site html publicado!!! (e so isso o site BRUH)";
+    const writeInterval = 300;
+
+    function showText1(h1Um, firstText, writeInterval) {
+        const char = firstText.split("").reverse();
+        const typer = setInterval(() => {
+            if (!char.length) {
+                return clearInterval(typer);
+            }
+            const nextL = char.pop();
+            h1Um.innerHTML += nextL;
+        }, writeInterval);
+    }
+    showText1(h1Um, firstText, writeInterval);
+})
+    </script>
+    <style>
+    h1 {
+        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    html {
+        background-color: rgb(80, 39, 156);
+    
+    }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu html</title>
 </head>
